# contribution

./: .editorconfig  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: grafana-datasources.yaml  loki.yaml  promtail.yaml
scripts/: event-consumer-entrypoint.sh  web-api-entrypoint.sh
src/contribution/application/: __init__.py
src/contribution/application/command_processors/: __init__.py  accept_movie_adding.py  accept_movie_addition.py  accept_movie_editing.py  accept_person_adding.py  accept_person_addition.py  accept_person_editing.py  add_movie.py  add_person.py  create_movie.py  create_person.py  create_user.py  edit_movie.py  edit_person.py  reject_movie_adding.py  reject_movie_addition.py  reject_movie_editing.py  reject_person_adding.py  reject_person_addition.py  reject_person_editing.py  update_movie.py  update_person.py  update_user.py
src/contribution/application/commands/: __init__.py  accept_contribution.py  accept_movie_adding.py  accept_movie_addition.py  accept_movie_editing.py  accept_person_adding.py  accept_person_addition.py  accept_person_editing.py  add_movie.py  add_person.py  create_movie.py  create_person.py  create_user.py  edit_movie.py  edit_person.py  reject_contribution.py  reject_movie_adding.py  reject_movie_addition.py  reject_movie_editing.py  reject_person_adding.py  reject_person_addition.py  reject_person_editing.py  update_movie.py  update_person.py  update_user.py
src/contribution/application/common/: __init__.py  command_processor.py  event_callback.py  identity_provider.py  make_cachable.py  object_storage.py  transaction_processor.py  unit_of_work.py
src/contribution/domain/: __init__.py  maybe.py
src/contribution/domain/constants/: __init__.py  achieved.py  contribution_status.py  crew_membership.py  genre.py  mpaa.py  sex.py  writing.py
src/contribution/domain/entities/: __init__.py  achievement.py  add_movie_contribution.py  add_person_contribution.py  contribution.py  crew_member.py  edit_movie_contribution.py  edit_person_contribution.py  movie.py  person.py  role.py  user.py  writer.py
src/contribution/domain/exceptions/: __init__.py  base.py  contrubution.py  email.py  money.py  movie.py  person.py  role.py  telegram.py  user.py
src/contribution/domain/models/: __init__.py  add_movie_contribution.py  add_person_contribution.py  country.py  currency.py  (+7 more)
src/contribution/infrastructure/: __init__.py  get_env.py
src/contribution/main/: cli.py  event_consumer.py  tg_bot.py  web_api.py
src/contribution/presentation/: maybe_value_from_mapping.py
tests/: conftest.py
tests/application/: conftest.py  test_add_movie.py  test_create_user.py
tests/infrastructure/: test_race_condition.py
(+349 files in other folders)
