[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contribution"
description = "Awesome Movie Database Contribution Service"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.12.3"

dependencies = [
    "uuid7==0.1.*",
    "aio-pika==9.4.*",
    "dishka==1.3.*",
    "motor==3.6.*",
    "cyclopts==3.0.*",
    "adaptix==3.0.0b8",
    "redis==5.1.*",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
]
dev = [
    "mypy==1.13.*",
    "ruff==0.6.*",
    "pre-commit==4.0.*",
]
web_api = [
    "fastapi==0.115.*",
    "uvicorn[standart]==0.32.*",
    "gunicorn==23.0.*",
]
event_consumer = [
    "faststream==0.5.*",
]
tui = [
    "textual==0.86.*",
]
tg_bot = [
    "aiogram==3.15.*",
]

[project.scripts]
contribution = "contribution.main.cli:main"
